--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>sysdig-secure</artifactId>
-  <version>3.1.2</version>
+  <version>3.1.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Sysdig Secure Container Image Scanner Plugin</name>
   <description>Integrates Jenkins with the Sysdig Secure Image Scanner to scan OCI images</description>
@@ -34,7 +34,7 @@
   <scm>
     <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
-    <tag>sysdig-secure-3.1.2</tag>
+    <tag>${project.artifactId}-${project.version}</tag>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
   </scm>
 
@@ -47,7 +47,7 @@
     <!-- https://www.jenkins.io/doc/developer/plugin-development/mark-a-plugin-incompatible/ -->
     <hpi.compatibleSinceVersion>3.0</hpi.compatibleSinceVersion>
     <!-- Allow reproducible builds -->
-    <project.build.outputTimestamp>2025-08-22T14:09:06Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-08-22T14:12:19Z</project.build.outputTimestamp>
   </properties>
 
   <dependencyManagement>
